// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExportButton With data Default 1`] = `
<div
  className="export btn btn-raised btn-default"
>
  <CSVLink
    data={
      Array [
        Array [],
        Array [],
      ]
    }
    filename="export.csv"
  >
    Label
  </CSVLink>
</div>
`;

exports[`ExportButton With data Default 2`] = `
<div
  className="export btn btn-raised btn-default"
>
  <CSVLink
    data={
      Array [
        Array [
          "Name",
          "ID",
          "Tag",
          "Slug",
        ],
        Array [
          "event name",
          1,
          "tag name",
          "tag slug",
        ],
        Array [
          "event 2 name",
          2,
          "tag 2 name",
          "tag 2 slug",
        ],
        Array [
          "Events: 1",
          "Ids: 1",
          "Tags: 1",
          "Slugs: 1",
        ],
      ]
    }
    filename="export.csv"
  >
    Label
  </CSVLink>
</div>
`;

exports[`ExportButton Without data Default 1`] = `
<div
  className="export btn btn-raised btn-default"
>
  <CSVLink
    data={
      Array [
        Array [],
        Array [],
      ]
    }
    filename="export.csv"
  >
    Label
  </CSVLink>
</div>
`;

exports[`ExportButton Without data Default 2`] = `
<div
  className="export btn btn-raised btn-default"
>
  <CSVLink
    data={
      Array [
        Array [],
        Array [],
      ]
    }
    filename="export.csv"
  >
    Label
  </CSVLink>
</div>
`;
